--- a/DBTaskAssistant/appsettings.json
+++ b/DBTaskAssistant/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=TaskAssistant;Username=postgres;Password=YourPass"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TaskAssistant;Username=postgres;Password=Your Password"
   }
 }
